<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>recognition_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="milun@todo.todo">milun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>

  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-tensorflow</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
